--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,9 +1,22 @@
 {% extends "market/base.html" %}
+
+{% block title_block %}
+Register
+{% endblock %}
+
 {% block body_block %}
-  <h1>Register Here</h1>
-  <form method="post" action=".">
+<h1 class="text-center">Register Here</h1>
+<br>
+<div class="row">
+	<div class="col-md-3">
+         <div class="top-bg"></div>
+    </div>
+	<box class="container col-md-6">
+	<form method="post" action=".">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Submit" />
-  </form>
+	</form>
+	</box>
+</div>
 {% endblock %}
