--- a/templates/market/userProfile.html
+++ b/templates/market/userProfile.html
@@ -3,7 +3,8 @@
 {% load staticfiles %}
 
 
-{% block title %}{{ selecteduser.username }} UserProfile{% endblock %}
+{% block title_block %}{{ selecteduser.username }} UserProfile{% endblock %}
+
 {% block body_block %}
 
 <h1>{{selecteduser.username}} Profile</h1>
