--- a/templates/market/show_notifications.html
+++ b/templates/market/show_notifications.html
@@ -8,15 +8,21 @@
 
 {% block body_block %}
 
-	<h1>Show Notifications</h1>
+	<h1>Your Notifications</h1>
 	<div class="row">
-		<div class="container">
-			<div class="col-md-5">
-				{% get_your_offers userprofile_object.userID %}
-			</div>
-			<div class="col-md-5">
-				{% get_to_you_offers userprofile_object.userID %}
-			</div>
+		<div class="col-md-6">
+			<h3> Your Offers: </h3>
+		</div>
+		<div class="col-md-6">
+			<h3> Request to You: </h3>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-5">
+			{% get_your_offers userprofile_object.userID %}
+		</div>
+		<div class="col-md-5">
+			{% get_to_you_offers userprofile_object.userID %}
 		</div>
 	</div>
 
