--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -31,12 +31,13 @@
 		<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
 		
 	<style>
-	box {
+	.box {
 		width: 330px;
 		padding: 10px;
 		border: 5px solid gray;
 		margin: 0;
 	}
+	
 	{% block style_block %}
 	{% endblock %}
 	</style>
