--- a/templates/market/index.html
+++ b/templates/market/index.html
@@ -4,6 +4,16 @@
 	Index
 {% endblock %}
 
+{% block style_block %}
+	.box {
+		background-color: white;
+		width: 360px;
+		height: 200px;
+		border: 5px solid gray;
+		margin: 10px;
+	}
+{% endblock %}
+
 {% block body_block %}
 <div>
 	{% if user.is_authenticated %}
@@ -29,19 +39,23 @@
 				{% if not user.is_authenticated %}
 				<div class="carousel-caption">
 					<h1>Join Us Now</h1>
-					<p>blablablablabla</p>
+					<p><font size="3">We got everything you need! Sign up and join the sessions now.</font></p>
 					<p><a class="btn btn-lg btn-primary" href="{% url 'registration_register' %}" role="button">Sign up today</a></p>
 				</div>
 				{% else %}
 				<div class="carousel-caption">
 					<h1>Join the Session Now</h1>
-					<p>blablablablabla</p>
+					<p><font size="3">We have different Session every month. Find a session which is suitable for you.</font></p>
 					<p><a class="btn btn-lg btn-primary" href="{% url 'sessionlist' %}" role="button">Session List</a></p>
 				</div>
 				{% endif %}
 			</div>
 			<div class="item">
 				<img class="second-slide" src="{%static 'images/marketPicture2.jpg' %}" alt="Picture of ..." />
+				<div class="carousel-caption">
+					<h1></h1>
+					<p><font size="3"></font></p>
+				</div>
 			</div>
 		</div>
 		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -54,22 +68,22 @@
 		</a>
 	</div>
 </div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-4">
+
+<div class="row">
+	<div class="container">
+		<div class="col-md-4 box">
 			<h2>What We Do</h2>
-			<p>blablablablablablablablablablablablablablablablablabla
-				blablablablablablabla</p>
+			<p>We set up an event site for every session. We also provide a relaxing enviroment for you to enjoy the conversation and trading.</p>
 		</div>
-		<div class="col-md-4">
-			<h2>How We Do</h2>
-			<p>blablablablablablablablablablablablablablablablablabla
-				blablablablablablabla</p>
+		<div class="col-md-4 box">
+			<h2>How It Works</h2>
+			<p>MarketDays have thousands members online everyday. Using your items in your inventory, you can ask anyone who joined within the same session for a trading. In contrast, others can also request to trade your items. </p>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4 box">
+
 			<h2>What Members Do</h2>
-			<p>blablablablablablablablablablablablablablablablablabla
-				blablablablablablabla</p>
+			<p>On the transacting day of the session, all the participations must to bring their trading item and attend the transaction. </p>
+
 		</div>
 	</div>
 </div>
