--- a/templates/market/haggle.html
+++ b/templates/market/haggle.html
@@ -83,7 +83,7 @@ Haggle view
   You don't have any tradable items!!
 </div>
 <div class="alert alert-danger" role="alert">
-  <a href="{% url 'add_item' current_user_object.userName %}" class="btn btn-primary" >Click here to add an item!</a>
+  <a href="{% url 'add_item' current_user_object.user.username %}" class="btn btn-primary" >Click here to add an item!</a>
 </div>
 </div>
 {% endif %}
