--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 #offer-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 25%;
+  width: 20%;
   margin:2%;
   background-color:#d1fff6;
   float:left;
@@ -9,6 +9,15 @@
 
 #offer-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+#inventory-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 300px;
+  margin:5%;
+  float:right;
+  background-color:#d1fff6;
+
 }
 
 #LHSitems{
