--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -31,13 +31,9 @@
 		<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
 		
 	<style>
-	.box {
-		width: 330px;
-		padding: 10px;
-		border: 5px solid gray;
-		margin: 0;
+	.content{
+		height: 100%;
 	}
-	
 	{% block style_block %}
 	{% endblock %}
 	</style>
@@ -57,8 +53,8 @@
 				{% if user.is_authenticated %}
 					<ul class="nav navbar-nav navbar-right">
 						<!--Regarding the sessions we should create sth in user model to decide if we should display him your present session/ your messages/ or join sessions -->
-            <li><a href="{% url 'notifications' user.username %}"><span class="glyphicon glyphicon-bell"></span> Notifications </a></li>
-            <li><a href="{% url 'view_user' user.username %}"><span class="glyphicon glyphicon-user"></span> Your Profile </a></li>
+						<li><a href="{% url 'notifications' user.username %}"><span class="glyphicon glyphicon-bell"></span> Notifications </a></li>
+						<li><a href="{% url 'view_user' user.username %}"><span class="glyphicon glyphicon-user"></span> Your Profile </a></li>
 						<li><a href="{% url 'auth_logout' %}?next=/market/"><span class="glyphicon glyphicon-log-out"></span> Log Out </a></li>
 					</ul>
 				{% else %}
