--- a/templates/market/index.html
+++ b/templates/market/index.html
@@ -6,7 +6,7 @@
 
 {% block style_block %}
 	.box {
-		background-color: white;
+		background-color: #E6E6E6;
 		width: 360px;
 		height: 200px;
 		border: 5px solid gray;
