--- a/templates/market/userProfile.html
+++ b/templates/market/userProfile.html
@@ -4,28 +4,50 @@
 
 
 {% block title_block %}{{ selecteduser.username }} UserProfile{% endblock %}
-
+{% block style_block %}
+.box {
+		background-color: #E6E6E6;
+		width: 500px;
+		padding: 10px;
+		border: 5px solid gray;
+		margin: 0;
+	}
+{% endblock %}
 {% block body_block %}
 
-<h1>{{selecteduser.username}} Profile</h1>
-
+<h1 class="text-center">{{selecteduser.username}} Profile</h1>
 <br/>
 <div class="row">
 	{% if selecteduser.username == user.username %}
-	<div id="edit_profile" style="float:right;" class="col-sm-4">
-		<div class="col-sm-3">
-		<div class="card container-fluid" style="width: 35rem;">
-			<div class="card-body">
-				<form method="post" action="." enctype="multipart/form-data">
-					{% csrf_token %}
-					{{ form.as_p }}
-					<input type="submit" value="Update" />
-				</form>
-			</div>
-		</div>
-		</div>
+	<div class="col-md-4">
+         <div class="top-bg"></div>
+    </div>
+	<div id="edit_profile" class="container col-md-9 box">
+		<form role="form" method="post" action="." enctype="multipart/form-data">
+		{% csrf_token %}
+		<p class="required"><label class="required" for="id_firstname">Firstname:</label>
+			<input class="form-control" id="id_firstname" name="firstname" type="text" maxlength="20" />
+			<span class="helptext">*This field is required.</span>
+		</p>
+		<p class="required"><label class="required" for="id_lastname">Lastname:</label>
+			<input class="form-control" id="id_lastname" name="lastname" type="text" maxlength="20" />
+			<span class="helptext">*This field is required.</span>
+		</p>
+		<p class="required"><label class="required" for="id_phonenum">Phone Number:</label>
+			<input class="form-control" id="id_phonenum" name="phonenum" type="number" maxlength="11" size="11" />
+			<span class="helptext">*This field is required.</span>
+		</p>
+		<p><label for="id_description">Description:</label>
+			<input class="form-control" id="id_description" name="description" type="text" style="height: 100px"  />
+		</p>
+		<p><label for="id_interest">Interest:</label>
+			<input class="form-control" id="id_interest" name="interest" type="text" style="height: 50px" />
+		</p>
+		<input type="file" name="pic" accept="image/*">
+		<button class="btn btn-primary" type="submit" value="update" style="float: right" />Update</button>
+		</form>
 	</div>
-	{% endif %}
 </div>
+	{% endif %}
 
 {% endblock %}
