--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -5,7 +5,7 @@ Register
 {% endblock %}
 {% block style_block %}
 .box {
-		background-color: white;
+		background-color: #E6E6E6;
 		width: 500px;
 		padding: 10px;
 		border: 5px solid gray;
@@ -20,10 +20,24 @@ Register
          <div class="top-bg"></div>
     </div>
 	<div class="container col-md-9 box">
-	<form method="post" action=".">
+	<form role="form" method="post" action=".">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit" />
+	<p class="required"><label class="required" for="id_username">Username:</label>
+		<input class="form-control" id="id_username" maxlength="30" name="username" type="text" />
+		<span class="helptext">Required: 30 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
+	</p>
+	<p class="required"><label class="required" for="id_email">Email:</label>
+		<input class="form-control" id="id_email" name="email" type="email" />
+	</p>
+	<p class="reuired"><label class="required" for="id_password1">Password:</label>
+		<input class="form-control" id="id_password1" name="password1" type="password" />
+	</p>
+	<p class="reuired"><label class="required" for="id_password2">Password confirmation:</label>
+		<input class="form-control" id="id_password2" name="password2" type="password" />
+		<span class="helptext">Please type your password again</span>
+	</p>
+    <button class="btn btn-lg btn-primary btn-block" type="submit"
+		value="submit" />Submit</button>
 	</form>
 	</div>
 </div>
