I finally made offer creation functional

--- a/templates/market/haggle.html
+++ b/templates/market/haggle.html
@@ -90,4 +90,7 @@ Haggle view
 
 
 <script src="/static/js/scripts/makeoffer.js"></script>
+<script type="text/javascript">
+  var opponentID = "{{opponent.userID}}";
+</script>
 {% endblock %}
