--- a/templates/market/userProfile.html
+++ b/templates/market/userProfile.html
@@ -1,5 +1,4 @@
 {% extends 'market/base.html' %}
-
 {% load staticfiles %}
 
 
@@ -25,25 +24,25 @@
 	<div id="edit_profile" class="container col-md-9 box">
 		<form role="form" method="post" action="." enctype="multipart/form-data">
 		{% csrf_token %}
-		<p class="required"><label class="required" for="id_firstname">Firstname:</label>
-			<input class="form-control" id="id_firstname" name="firstname" type="text" maxlength="20" />
+		<p class="required"><label class="required" for="id_firstname" >Firstname:</label>
+			<input class="form-control" id="id_firstname" name="firstName" type="text" value="{{userprofile_object.firstName}}" maxlength="20" />
 			<span class="helptext">*This field is required.</span>
 		</p>
 		<p class="required"><label class="required" for="id_lastname">Lastname:</label>
-			<input class="form-control" id="id_lastname" name="lastname" type="text" maxlength="20" />
+			<input class="form-control" id="id_lastname" name="lastName" type="text" maxlength="20" value="{{userprofile_object.lastName}}" />
 			<span class="helptext">*This field is required.</span>
 		</p>
 		<p class="required"><label class="required" for="id_phonenum">Phone Number:</label>
-			<input class="form-control" id="id_phonenum" name="phonenum" type="number" maxlength="11" size="11" />
+			<input class="form-control" id="id_phonenum" name="userPhoneNumber" type="number" maxlength="11" size="11" />
 			<span class="helptext">*This field is required.</span>
 		</p>
 		<p><label for="id_description">Description:</label>
-			<input class="form-control" id="id_description" name="description" type="text" style="height: 100px"  />
+			<input class="form-control" id="id_description" name="userDescription" type="text" style="height: 100px"  />
 		</p>
 		<p><label for="id_interest">Interest:</label>
-			<input class="form-control" id="id_interest" name="interest" type="text" style="height: 50px" />
+			<input class="form-control" id="id_interest" name="userInterests" type="text" style="height: 50px" />
 		</p>
-		<input type="file" name="pic" accept="image/*">
+		<input type="file" name="picture" accept="image/*">
 		<button class="btn btn-primary" type="submit" value="update" style="float: right" />Update</button>
 		</form>
 	</div>
