More changes to counteroffer - now you can do it, but it doesnt actually start out with the info you need to see!

--- a/templates/market/counteroffer.html
+++ b/templates/market/counteroffer.html
@@ -6,6 +6,7 @@ Haggle view
 {% endblock %}
 {% block body_block %}
 <div class="jumbotron">
+  {% if opponent %}
   <div class="row">
     <!-- this row is the top row, containing your opponent's information -->
     <div class="col-sm-6">
@@ -26,6 +27,7 @@ Haggle view
         {% endif %}
     </div>
   </div>
+  {% endif %}
 
 
 
