displaying messages when viewing counteroffers

--- a/templates/market/counteroffer.html
+++ b/templates/market/counteroffer.html
@@ -73,7 +73,7 @@ Haggle view
     <!-- this row is for containing the message box and "make offer/cancel buttons" -->
     <div class="col-sm-6 form-group">
       <label for="message">Do you have a message to add?</label>
-      <textarea class="form-control" rows="3" id="offer-message"></textarea>
+      <textarea class="form-control" rows="3" id="offer-message">{{offer_object.message}}</textarea>
     </div>
     <div class="col-sm-3">
       <!-- This div is for the ACCEPT OFFER button when template is reused for countering-->
