The accept offer functionality works to a degree - we still need to delete offers involving these items!

--- a/templates/market/haggle.html
+++ b/templates/market/haggle.html
@@ -16,6 +16,7 @@ Haggle view
         <!-- this is where their information pops up : description and interests -->
         {% if opponent %}
         <div style="float:right;">
+          <p class="text-muted"> <em>Here's who you're dealing with...</em> </p>
           <h1>{{opponent.firstName}}{{opponent.lastName}}</h1>
           <p><em>Description</em> : {{opponent.userDescription}}</p>
           <p><em>Interests</em> : {{opponent.userInterests}}</p>
@@ -35,21 +36,23 @@ Haggle view
     <!-- this row is for containing the trading floor -->
     <div id="LHSitems" class="col-sm-3">
       <ul id="youritems" class="ui-helper-reset ui-helper-clearfix">
+        <p class="text-muted">Your tradeable inventory!</p>
       {% get_tradable_items current_user_object.userID %}
       </ul>
     </div>
     <div id="LHSoffer" class="col-sm-3 panel panel-default">
       <ul id="youroffer" class="ui-helper-reset ui-helper-clearfix">
-        <p class="text-muted">Place your offers here!</p>
+        <p class="text-muted"><em>Place your offers here!</em></p>
       </ul>
     </div>
     <div id="RHSoffer" class="col-sm-3 panel panel-default">
       <ul id="theiroffer" class="ui-helper-reset ui-helper-clearfix">
-        <p class="text-muted">Place your offers here!</p>
+        <p class="text-muted"><em>Place your offers here!</em></p>
       </ul>
     </div>
     <div id="RHSitems" class="col-sm-3">
       <ul id="theiritems" class="ui-helper-reset ui-helper-clearfix">
+        <p class="text-muted">Here's what {{opponent.user.username}} has!</p>
         {% get_tradable_items opponent.userID %}
       </ul>
     </div>
@@ -70,8 +73,8 @@ Haggle view
       <!-- This div is for the ACCEPT OFFER button when template is reused for countering-->
     </div>
     <div class="col-sm-3">
-      <p class="btn btn-primary" id="submitOffer">Make an offer</p>
-      <p class="btn btn-danger" id="cancelOffer">Cancel</p>
+      <p class="btn btn-primary btn-block" id="submitOffer">Make an offer</p>
+      <p class="btn btn-danger btn-block" id="cancelOffer">Cancel</p>
     </div>
   </div>
 </div>
@@ -87,7 +90,9 @@ Haggle view
 </div>
 </div>
 {% endif %}
-
+<div id="dialog-confirm" title="Offer sent!">
+  <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>Offer successfully sent! Close to continue trading.</p>
+</div>
 
 <script src="/static/js/scripts/makeoffer.js"></script>
 <script type="text/javascript">
