small change, took two seconds

--- a/templates/market/counteroffer.html
+++ b/templates/market/counteroffer.html
@@ -54,6 +54,7 @@ Haggle view
     </div>
     <div id="RHSitems" class="col-sm-3">
       <ul id="theiritems" class="ui-helper-reset ui-helper-clearfix">
+        <p class="text-muted">Your opponent's inventory!</p>
         {% get_tradable_exclude_RHS offer_object.offerID %}
       </ul>
     </div>
