--- a/templates/market/viewuser.html
+++ b/templates/market/viewuser.html
@@ -2,48 +2,61 @@
 {% load staticfiles %}
 {% load market_template_tags %}
 {% block title_block %}
-	UserProfile
+	{{userprofile_object.user.username}}'s Profile
 {% endblock %}
 {% block body_block %}
 	<div class="jumbotron">
 		{% if userprofile_object %}
     <div class="row">
-		<div class="page-header">
+		<div class="col-md-3">
+			<img class="img-thumbnail" src="{{userprofile_object.picture.url}}">
 		</div>
-    <div class="col-sm-3">
-		<img class="img-thumbnail" src="{{userprofile_object.picture.url}}">
-		<dl>
-      <h1><em>{{ userprofile_object.user.username }}</em></h1>
-			<dt><h3>First Name</h3></dt>
+		<div class="col-md-9">
+			<h1><em>{{ userprofile_object.user.username }}</em></h1>
+			{% if userprofile_object.user.username == user.username %}
+				<form method="get" action="{% url 'profile' user.username %}">
+				<button type="submit">Edit</button>
+				</form>
+			{% endif %}
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<dt><h2>First Name:</h2></dt>
 			<dd>{{userprofile_object.firstName}}</dd>
-			<dt><h2>Last Name</h2></dt>
+			<dt><h2>Last Name:</h2></dt>
 			<dd>{{userprofile_object.lastName}}</dd>
 			<dt><h2>email</h2></dt>
 			<dd>{{userprofile_object.user.email}}</dd>
 			<dt><h2>phone number</h2></dt>
 			<dd>{{userprofile_object.userPhoneNumber}}</dd>
+		</div>
+		<div class="col-md-8">
 			<dt><h2>Description</h2></dt>
 			<dd>{{userprofile_object.userDescription}}</dd>
 			<dt><h2>Interests</h2></dt>
 			<dd>{{userprofile_object.userInterests}}</dd>
 			<dt><h2>Date {{userprofile_object.firstName}} Joined</h2></dt>
 			<dd>{{userprofile_object.userStartDate}}</dd>
-		</dl>
-  	</div>
-      <div class="col-sm-9">
-        <h1>This user's <em>Inventory</em> </h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<h1>{{userprofile_object.user.username}}'s <em>Inventory</em> </h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
         {% get_your_items userprofile_object.userID %}
-      </div>
+		</div>
     </div>
+    
 		{% else %}
 		<strong> This person doesn't exist! Should they? </strong>
 		{% endif %}
 
     {% if userprofile_object.user.username == user.username %}
-		<form method="get" action="{% url 'profile' user.username %}">
-	    <button type="submit">Edit</button>
-		</form>
-		<br/>
+		
 		<form method="get" action="{% url 'add_item' user.username %}">
 	    <button type="submit">Add Item</button>
 		</form>
