changed little bit

--- a/templates/market/add_item.html
+++ b/templates/market/add_item.html
@@ -9,7 +9,7 @@
 .box{
 		background-color: #E6E6E6;
 		width: 400px;
-		height: 280px;
+		height: 290px;
 		padding: 10px;
 		border: 5px solid gray;
 		margin: 25px;
@@ -35,8 +35,9 @@
 		<input type="text" name="itemName" id="id_itemName" class="form-control" />
 
 		<label for="id_itemDescription">Description of Item: </label>
-		<textarea id="id_itemdescription" name="itemDescription" cols="53" rows="4" style="resize: none"></textarea>
+		<textarea id="id_itemdescription" name="itemDescription" cols="53" rows="4" style="resize: none"> </textarea>
 		<br>
+		<input type="file" name="picture" accept="image/*">
 		<br>
 		<button class="btn btn-success" type="submit" value="Add it" />Add item</button>
     </form>
