--- a/templates/market/profile_registration.html
+++ b/templates/market/profile_registration.html
@@ -4,19 +4,47 @@
 	Registration-Step2
 {% endblock %}
 
+{% block style_block %}
+.box {
+		background-color: #E6E6E6;
+		width: 500px;
+		padding: 10px;
+		border: 5px solid gray;
+		margin: 0;
+	}
+{% endblock %}
 {% block body_block %}
 <h1 class="text-center">Registration - step2</h1>
 <br>
 <div class="row">
-	<div class="col-md-3">
+	<div class="col-md-4">
          <div class="top-bg"></div>
     </div>
-	<box class="container col-md-6 ">
+	<div class="container col-md-9 box">
 		<form method="post" action="." enctype="multipart/form-data">
 			{% csrf_token %}
-			{{ form.as_p }}
-			<input type="submit" value="Submit" />
+			<p class="required"><label class="required" for="id_firstname" >Firstname:</label>
+			<input class="form-control" id="id_firstname" name="firstName" type="text" maxlength="20" />
+			<span class="helptext">*This field is required.</span>
+		</p>
+		<p class="required"><label class="required" for="id_lastname">Lastname:</label>
+			<input class="form-control" id="id_lastname" name="lastName" type="text" maxlength="20" />
+			<span class="helptext">*This field is required.</span>
+		</p>
+		<p class="required"><label class="required" for="id_phonenum">Phone Number:</label>
+			<input class="form-control" id="id_phonenum" name="userPhoneNumber" type="tel" maxlength="11" size="11" />
+			<span class="helptext">*This field is required.</span>
+		</p>
+		<p><label for="id_description">Description:</label><br>
+			<textarea id="id_description" name="userDescription" cols="69" rows="5" style="resize: none" ></textarea>
+		</p>
+		<p><label for="id_interest">Interest:</label>
+			<input class="form-control" id="id_interest" name="userInterests" type="text" style="height: 50px"  />
+		</p>
+		<input type="file" name="picture" accept="image/*">
+		<button class="btn btn-primary" type="submit" value="Update" style="float: right" />Update</button>
 		</form>
-	</box>
+		</form>
+	</div>
 </div>
 {% endblock %}
