--- a/templates/market/profile_registration.html
+++ b/templates/market/profile_registration.html
@@ -17,10 +17,10 @@
 <h1 class="text-center">Registration - step2</h1>
 <br>
 <div class="row">
-	<div class="col-md-4">
+	<div class="col-sm-4">
          <div class="top-bg"></div>
     </div>
-	<div class="container col-md-9 box">
+	<div class="container col-sm-9 box">
 		<form method="post" action="." enctype="multipart/form-data">
 			{% csrf_token %}
 			<p class="required"><label class="required" for="id_firstname" >Firstname:</label>
@@ -36,7 +36,7 @@
 			<span class="helptext">*This field is required.</span>
 		</p>
 		<p><label for="id_description">Description:</label><br>
-			<textarea id="id_description" name="userDescription" cols="69" rows="5" style="resize: none" ></textarea>
+			<textarea id="id_description" name="userDescription" cols="62" rows="5" style="resize: none" ></textarea>
 		</p>
 		<p><label for="id_interest">Interest:</label>
 			<input class="form-control" id="id_interest" name="userInterests" type="text" style="height: 50px"  />
