--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,6 @@
   margin:5%;
   float:right;
   background-color:#d1fff6;
-
 }
 
 #LHSitems{
@@ -65,7 +64,6 @@
   background-color:#c9e0e8;
   width:75%;
 }
-
 .session-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -78,11 +76,13 @@
 .session-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
-
 .card-photo{
   width: 200px;
 }
-
+#hiddenID{
+  visibility: collapse;
+  font-size: 1px;
+}
 .navbar-default {
   background-color: #000000;
   border-color: #ffffff;
@@ -162,6 +162,43 @@
   background-color:#ffffff;
   color:#000000;
 }
+
 body{
   background-image: linear-gradient(to bottom right, white, #000000);
 }
+
+
+
+.content{
+  height: 100%;
+}
+
+.box {
+  background-color: #E6E6E6;
+  width: 360px;
+  height: 200px;
+  border: 5px solid gray;
+  margin: 10px;
+}
+.prof-reg-box {
+		background-color: #E6E6E6;
+		width: 500px;
+		padding: 10px;
+		border: 5px solid gray;
+		margin: 0;
+	}
+.edit-prof-box {
+  		background-color: #E6E6E6;
+  		width: 500px;
+  		padding: 10px;
+  		border: 5px solid gray;
+  		margin: 0;
+  }
+  .add-item-box{
+    	background-color: #E6E6E6;
+    	width: 400px;
+    	height: 290px;
+    	padding: 10px;
+    	border: 5px solid gray;
+    	margin: 25px;
+  }
