--- a/templates/market/add_item.html
+++ b/templates/market/add_item.html
@@ -4,17 +4,6 @@
 {% block title_block %}
     Add Item
 {% endblock %}
-
-{% block style_block %}
-.box{
-		background-color: #E6E6E6;
-		width: 400px;
-		height: 290px;
-		padding: 10px;
-		border: 5px solid gray;
-		margin: 25px;
-	}
-{% endblock %}
 {% block body_block %}
 <div class="row">
 	<div class="col-sm-5">
@@ -28,7 +17,7 @@
 	<div class="col-sm-4">
          <div class="top-bg"></div>
     </div>
-	<div class="col-sm-8 container box">
+	<div class="col-sm-8 container add-item-box">
     <form method="post" action="." enctype="multipart/form-data">
       {% csrf_token %}
 		<label for="id_itemName">Item Name:</label>
