--- a/templates/market/offer_items.html
+++ b/templates/market/offer_items.html
@@ -4,7 +4,7 @@
   <li class="ui-widget-content ui-corner-tr trading-card draggable w3-dropdown-hover">
     <img class="img-thumbnail mx-auto d-block" src="{{item.picture.url}}" alt="{{item.itemDescription}}" width="96", height="72">
     <h5 class="ui-widget-header">{{item.itemName}}</h5>
-    <small id="hiddenID" style="visibility:collapse; font-size:1px;">{{item.itemID}}</small>
+    <small id="hiddenID">{{item.itemID}}</small>
     <!--<p class="w3-dropdown-content">{{item.itemDescription}}</p>-->
   </li>
   {% endfor %}
@@ -15,7 +15,7 @@
   <li class="ui-widget-content ui-corner-tr trading-card draggable w3-dropdown-hover">
     <img class="img-thumbnail mx-auto d-block" src="{{item.picture.url}}" alt="{{item.itemDescription}}" width="96", height="72">
     <h5 class="ui-widget-header">{{item.itemName}}</h5>
-    <small id="hiddenID" style="visibility:collapse; font-size:1px;">{{item.itemID}}</small>
+    <small id="hiddenID">{{item.itemID}}</small>
     <!--<p class="w3-dropdown-content">{{item.itemDescription}}</p>-->
   </li>
   {% endfor %}
@@ -26,7 +26,7 @@
   <li class="ui-widget-content ui-corner-tr trading-card draggable w3-dropdown-hover">
     <img class="img-thumbnail mx-auto d-block" src="{{item.picture.url}}" alt="{{item.itemDescription}}" width="96", height="72">
     <h5 class="ui-widget-header">{{item.itemName}}</h5>
-    <small id="hiddenID" style="visibility:collapse; font-size:1px;">{{item.itemID}}</small>
+    <small id="hiddenID">{{item.itemID}}</small>
     <!--<p class="w3-dropdown-content">{{item.itemDescription}}</p>-->
   </li>
   {% endfor %}
@@ -37,7 +37,7 @@
   <li class="ui-widget-content ui-corner-tr trading-card draggable w3-dropdown-hover">
     <img class="img-thumbnail mx-auto d-block" src="{{item.picture.url}}" alt="{{item.itemDescription}}" width="96", height="72">
     <h5 class="ui-widget-header">{{item.itemName}}</h5>
-    <small id="hiddenID" style="visibility:collapse; font-size:1px;">{{item.itemID}}</small>
+    <small id="hiddenID">{{item.itemID}}</small>
     <!--<p class="w3-dropdown-content">{{item.itemDescription}}</p>-->
   </li>
   {% endfor %}
@@ -48,7 +48,7 @@
   <li class="ui-widget-content ui-corner-tr trading-card draggable w3-dropdown-hover">
     <img class="img-thumbnail mx-auto d-block" src="{{item.picture.url}}" alt="{{item.itemDescription}}" width="96", height="72">
     <h5 class="ui-widget-header">{{item.itemName}}</h5>
-    <small id="hiddenID" style="visibility:collapse; font-size:1px;">{{item.itemID}}</small>
+    <small id="hiddenID">{{item.itemID}}</small>
     <!--<p class="w3-dropdown-content">{{item.itemDescription}}</p>-->
   </li>
   {% endfor %}
