--- a/templates/market/profile_registration.html
+++ b/templates/market/profile_registration.html
@@ -4,15 +4,6 @@
 	Registration-Step2
 {% endblock %}
 
-{% block style_block %}
-.box {
-		background-color: #E6E6E6;
-		width: 500px;
-		padding: 10px;
-		border: 5px solid gray;
-		margin: 0;
-	}
-{% endblock %}
 {% block body_block %}
 <h1 class="text-center">Registration - step2</h1>
 <br>
@@ -20,7 +11,7 @@
 	<div class="col-sm-4">
          <div class="top-bg"></div>
     </div>
-	<div class="container col-sm-9 box">
+	<div class="container col-sm-9 prof-reg-box">
 		<form method="post" action="." enctype="multipart/form-data">
 			{% csrf_token %}
 			<p class="required"><label class="required" for="id_firstname" >Firstname:</label>
