I fixed a few template issues, and implemented Offer deletion upon accepting and offer!

--- a/templates/market/about.html
+++ b/templates/market/about.html
@@ -16,7 +16,7 @@
 	<div class="container">
 		<div class="col-md-4 box">
 			<h2>What We Do</h2>
-			<p>We set up an online market, for you, our users, to advertise and trade your items. We also provide a relaxing enviroment for you to enjoy the conversation and trading.</p>
+			<p>We set up an online market for you, our users, to advertise and trade your items. We also provide a relaxing enviroment for you to enjoy the conversation and trading.</p>
 		</div>
 		<div class="col-md-4 box">
 			<h2>How It Works</h2>
@@ -24,9 +24,12 @@
 		</div>
 		<div class="col-md-4 box"
 			<em><h2>What Members Do</h2></em>
-			<p>On the last day of the online market session, all the participants must bring their trading items to the physical market location, and make the trade.</p>
+			<p>On the last day of the online market session, all the participants must bring their trading items to the physical market location, and make the trade. It's a fun, competitve environment - a place to make new friends!</p>
 		</div>
 	</div>
+</div>
+<div class="row">
+	<p class="text-center text-muted">MarketDays</p>
 </div>
 
 {% endblock %}
