--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -3,15 +3,7 @@
 {% block title_block %}
 Register
 {% endblock %}
-{% block style_block %}
-.box {
-		background-color: #E6E6E6;
-		width: 500px;
-		padding: 10px;
-		border: 5px solid gray;
-		margin: 0;
-	}
-{% endblock %}
+
 {% block body_block %}
 <h1 class="text-center">Register Here</h1>
 <br>
@@ -19,7 +11,7 @@ Register
 	<div class="col-md-4">
          <div class="top-bg"></div>
     </div>
-	<div class="container col-md-9 box">
+	<div class="container col-md-9 prof-reg-box">
 	<form role="form" method="post" action=".">
     {% csrf_token %}
 	<p class="required"><label class="required" for="id_username">Username:</label>
